# klingon-translator

./: .gitignore  CLAUDE.md  Klingon_Translator_Overview.pptx  README.md  app.py  environment.yml  klingon-translator.code-workspace  pyproject.toml
colab/: klingon_training.ipynb
notebooks/: 01_explore.ipynb
scripts/: parse_paqbatlh.py
src/klingon_translator/: __init__.py
src/klingon_translator/data/: download.py
src/klingon_translator/model/: tokenizer.py  translator.py
src/klingon_translator/training/: colab_utils.py  dataset.py  evaluate.py  gpu.py  trainer.py
src/klingon_translator/utils/: config.py
tests/: test_colab_utils.py  test_dataset.py  test_evaluate.py  test_gpu.py  test_tokenizer.py  test_training.py  test_translator.py
